<resources>
    <string name="app_name">WhereIsMyMoney</string>
    <string name="menu_today">Сегодня</string>
    <string name="menu_my_debts">Мои долги</string>
    <string name="menu_my_debtors">Кто-то должен мне</string>

    <!-- Main Activity -->
    <string name="new_debt">Новый долг</string>
    <string name="placeholder_text">На этом пока всё</string>

    <string name="need_to_return_today">Отдать сегодня!</string>
    <string name="will_be_returned_today">Вернут сегодня</string>

    <!-- New Debt Activity -->
    <string name="debt_type_switch_off">Я занимаю</string>
    <string name="debt_type_switch_on">Я должник</string>
    <string name="name_input_hint_off">Имя должника</string>
    <string name="name_input_hint_on">Имя доброго человека</string>
    <string name="date_text_off">Вернёт до: никогда</string>
    <string name="date_text_on">Вернуть до: никогда</string>
    <string name="return_until_off">Вернёт до: %s</string>
    <string name="return_until_on">Вернуть до: %s</string>

    <string name="save_text">Сохранить</string>
    <string name="sum_input_hint">Сумма</string>

    <!-- Check for errors -->
    <string name="amount_layout_error">Это поле не может быть пустым</string>
    <string name="name_layout_error">Это поле не может быть пустым</string>
    <string name="date_layout_error">Установите дату</string>

    <!-- Warnings -->
    <string name="network_error">Не удалось установить соединение с сервером</string>
    <string name="back_press_warning">Данные не сохранятся. Продолжить?</string>

    <!-- Currency -->
    <string name="RUB">₽</string>
    <string name="EUR">€</string>
    <string name="USD">$</string>

    <string name="currency_text">"Курс валют (%s):</string>
    <string name="EUR_equal_USD">1€ = %.3f $</string>
    <string name="EUR_equal_RUB">1€ = %.3f ₽</string>

    <string name="my_debts_sum">Я должен: %s ₽</string>
    <string name="my_debtors_sum">Мне должны: %s ₽</string>

    <!-- Dialog strings -->
    <string name="save_question">Сохранить?</string>
    <string name="agree_text">Ну ладно</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="debt_added">Долг добавлен!</string>
</resources>
