<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_today">

    <fragment
        android:id="@+id/nav_today"
        android:name="com.example.whereismymoney.ui.today.TodayFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/nav_my_debts"
        android:name="com.example.whereismymoney.ui.my_debts.MyDebtsFragment"
        android:label="@string/menu_my_debts"
        tools:layout="@layout/fragment_my_debts" />

    <fragment
        android:id="@+id/nav_my_debtors"
        android:name="com.example.whereismymoney.ui.my_debtors.MyDebtorsFragment"
        android:label="@string/menu_my_debtors"
        tools:layout="@layout/fragment_my_debtors" />

</navigation>